[gd_scene load_steps=6 format=3 uid="uid://cp2qbthk8urx2"]

[ext_resource type="PackedScene" uid="uid://bc7fw6ecvwcv6" path="res://scenes/restaurant.tscn" id="1_ed4hd"]
[ext_resource type="Script" path="res://scenes/tutorial/tutorial_scene.gd" id="1_lt0ct"]
[ext_resource type="Script" path="res://scenes/tutorial/tutorial_point.gd" id="2_25uqi"]
[ext_resource type="StyleBox" uid="uid://cl0ts27mjapj1" path="res://scenes/tutorial/tutorial_text_box.tres" id="4_r5avi"]
[ext_resource type="PackedScene" uid="uid://03f307g5cj2y" path="res://nodes/customers/customer.tscn" id="5_qrxt3"]

[node name="TutorialScene" type="Node3D"]
script = ExtResource("1_lt0ct")

[node name="Restaurant" parent="." instance=ExtResource("1_ed4hd")]

[node name="TutorialPoints" type="Node3D" parent="."]

[node name="Point0" type="Node3D" parent="TutorialPoints"]
transform = Transform3D(-0.810064, 0.347928, -0.471956, 0, 0.804916, 0.593388, 0.586342, 0.480682, -0.652034, -2.9696, 3.93211, -0.689738)
script = ExtResource("2_25uqi")
description = "Welcome to your new place of employment, human! Click to progress the tutorial."

[node name="Point1" type="Node3D" parent="TutorialPoints"]
transform = Transform3D(0.807967, 0.302574, -0.505606, 0, 0.858084, 0.513509, 0.589227, -0.414899, 0.693304, -2.28493, 2.46044, 3.49654)
script = ExtResource("2_25uqi")
description = "The service station is where you will take customer's orders and provide them sustenance. It also has ample counter space."

[node name="Point2" type="Node3D" parent="TutorialPoints"]
transform = Transform3D(-0.546138, 0.479258, -0.687055, 0, 0.820173, 0.572115, 0.837695, 0.312454, -0.447928, 0.984165, 2.70677, 1.92058)
script = ExtResource("2_25uqi")
description = "The sink is used to wash dishes, and the chopping board to cut food items."

[node name="Point3" type="Node3D" parent="TutorialPoints" node_paths=PackedStringArray("station")]
transform = Transform3D(-0.98875, -0.0861093, 0.122304, 0, 0.817669, 0.575688, -0.149576, 0.569212, -0.808471, 0.00781, 2.57879, 2.79274)
script = ExtResource("2_25uqi")
description = "The fridge contains your necessary ingredients, and the trash can is used to dispose of your inevitable mistakes."
station = NodePath("../../Restaurant/Stations/FridgeStation")

[node name="Point4" type="Node3D" parent="TutorialPoints"]
transform = Transform3D(-0.34444, -0.439266, 0.829703, 0, 0.883783, 0.467897, -0.938808, 0.161163, -0.304411, -0.875909, 2.16725, 2.21097)
script = ExtResource("2_25uqi")
description = "The stove can cook meat to make it ready for consumption. Be careful - it's hot!"

[node name="Point5" type="Node3D" parent="TutorialPoints"]
transform = Transform3D(1, 0, 0, 0, 0.983571, 0.180519, 0, -0.180519, 0.983571, 0, 2.868, 3.53)
script = ExtResource("2_25uqi")
description = "Get out there and start flipping some burgers!"

[node name="TutorialCam" type="Camera3D" parent="."]
transform = Transform3D(-0.952939, 0.0981888, -0.286821, 0, 0.946097, 0.323882, 0.303162, 0.30864, -0.901573, -1.47269, 6.28181, -5.60166)
current = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_r5avi")

[node name="TutorialText" type="Label" parent="MarginContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2

[node name="Customer" parent="." instance=ExtResource("5_qrxt3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.3)

[editable path="Restaurant"]
